--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
     "superagent": "4.1.0",
     "ytdl": "0.11.1",
     "ytdl-core": "0.29.1",
-    "ytsearcher": "1.2.2",
+    "ytsearcher": "1.2.2"
   }
 }
